updated almost all methods
