# doc/api.yaml
@@ -555,7 +555,7 @@ paths:
             $ref : "#/components/responses/InternalServerError" 
     
     #commentPhoto    - LastMod : 6/12 - Status : Working
-    #getCommentsList - LastMod : 7/12 - Status : Not Implemented
+    #getCommentsList - LastMod : 10/12 - Status : Working
     /photos/{photoID}/comments/:
       parameters:
         - $ref : "#/components/parameters/photoID"
@@ -592,7 +592,7 @@ paths:
         operationId: getCommentsList
         tags:
           - Photos Interactions
-          - Not Implemented
+          - Working
         summary: Gets the list of all the comments to the photo
         description: Gets the list of all the comments to the photo        
         responses:
@@ -616,8 +616,8 @@ paths:
           "500":
             $ref : "#/components/responses/InternalServerError"
           
-    #getComment     - LastMod : 6/12 - Status : Not Working
-    #uncommentPhoto - LastMod : 6/12 - Status : Not Implemented
+    #getComment     - LastMod : 10/12 - Status : Working
+    #uncommentPhoto - LastMod : 10/12 - Status : Working
     /photos/{photoID}/comments/{commentID}/:
       parameters: 
         - $ref : "#/components/parameters/photoID"
@@ -627,7 +627,7 @@ paths:
         operationId: getComment
         tags: 
           - Photos Interactions
-          - Not Working
+          - Working
         summary: Gets the comment details
         description: Takes a comment id and returns the comment
         responses:
@@ -650,7 +650,7 @@ paths:
         operationId: uncommentPhoto
         tags:
           - Photos Interactions
-          - Not Working
+          - Working
         summary: Deletes a comment to the photo
         description: |
           Deletes a comment to the photo, useing both photoID and commentID.
