# service/api/delete-uncommentPhoto.go
@@ -17,6 +17,7 @@ func (rt *_router) uncommentPhoto(w http.ResponseWriter, r *http.Request, ps htt
 	- takes the userID from authentication
 	- validates it
 	*/
+
 	userID, e := strconv.Atoi(r.Header.Get("Authorization"))
 	if e != nil {
 		http.Error(w, "Couldn't identify userId for authentication "+e.Error(), http.StatusUnauthorized)
@@ -32,6 +33,22 @@ func (rt *_router) uncommentPhoto(w http.ResponseWriter, r *http.Request, ps htt
 		}
 		return
 	}
+	//Takes the id of the photo, and validates it
+	photoID, err := strconv.Atoi(ps.ByName("photoID"))
+	if err != nil {
+		http.Error(w, "Could not convert the photoID", http.StatusBadRequest)
+		return
+	}
+	photo, s, e := rt.db.GetPhoto(photoID)
+	if e != nil {
+		if errors.Is(e, database.ErrNotFound) {
+			http.Error(w, s, http.StatusNotFound)
+		}
+		if errors.Is(e, database.ErrInternalServerError) {
+			http.Error(w, "An error occurred while validating the photo "+e.Error(), http.StatusInternalServerError)
+		}
+		return
+	}
 
 	//Takes the id of the comment, and validates it
 	commentID, err := strconv.Atoi(ps.ByName("commentID"))
@@ -39,14 +56,32 @@ func (rt *_router) uncommentPhoto(w http.ResponseWriter, r *http.Request, ps htt
 		http.Error(w, "Could not convert the commentID", http.StatusBadRequest)
 		return
 	}
-	s, e := rt.db.DeleteComment(commentID)
+
+	comment, s, e := rt.db.GetComment(commentID)
 	//Checks for DB errors
 	if e != nil {
 		if errors.Is(e, database.ErrNotFound) {
 			http.Error(w, s, http.StatusNotFound)
 		}
 		if errors.Is(e, database.ErrInternalServerError) {
-			http.Error(w, "An error occurred while deleting the comment "+e.Error(), http.StatusInternalServerError)
+			http.Error(w, "An error occurred while taking the comment "+s, http.StatusInternalServerError)
+		}
+		return
+	}
+	// Only the user that commented and the one that posted the photo can delete comments from a photo
+	if comment.UserID != userID && photo.UserId != userID {
+		http.Error(w, "The user is not authorized to delete this comment", http.StatusUnauthorized)
+		return
+	}
+
+	s, e = rt.db.DeleteComment(commentID)
+	//Checks for DB errors
+	if e != nil {
+		if errors.Is(e, database.ErrNotFound) {
+			http.Error(w, s, http.StatusNotFound)
+		}
+		if errors.Is(e, database.ErrInternalServerError) {
+			http.Error(w, "An error occurred while deleting the comment "+s, http.StatusInternalServerError)
 		}
 		return
 	}
